<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/couleurFond">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="581dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="-4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2">

                <androidx.cardview.widget.CardView
                    android:layout_width="302dp"
                    android:layout_height="476dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_watch_later_2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/a_faire"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                            <LinearLayout
                                android:id="@+id/linearLayoutAFaire"                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_marginTop="10dp">


                            </LinearLayout>


                        </ScrollView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="302dp"
                    android:layout_height="476dp"
                    android:layout_marginLeft="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_create_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/en_cours"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                            <LinearLayout
                                android:id="@+id/linearLayoutEnCours"                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_marginTop="10dp">
                            </LinearLayout>


                        </ScrollView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="302dp"
                    android:layout_height="476dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_check_circle_2" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/terminee"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                            <LinearLayout
                                android:id="@+id/linearLayoutTerminee"                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_marginTop="10dp">
                            </LinearLayout>


                        </ScrollView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/diagrammePie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_pie_chart_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/diagrammeGantt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_bar_chart_24"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ajoutTache"
                android:layout_width="wrap_content"
                android:layout_height="67dp"
                android:layout_gravity="bottom"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_input_add"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>